// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> should render allFacilitiesCheckbox when searchType = "lot" & showCheckbox="true" 1`] = `
<div
  className="searchBarDiv"
>
  <div
    className="ms-TextField root searchBarTextField ms-TextField--borderless rootIsBorderless"
  >
    <div
      className="ms-TextField-wrapper wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup"
      >
        <div
          className="ms-TextField-prefix fieldPrefixSuffix"
        >
          <button
            aria-describedby={null}
            aria-expanded={false}
            aria-haspopup={true}
            aria-label={undefined}
            aria-labelledby={null}
            aria-owns={null}
            aria-pressed={undefined}
            className="ms-Button ms-Button--default searchTypesMenuButton root-32"
            data-is-focusable={true}
            disabled={undefined}
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <div
              className="ms-Button-flexContainer flexContainer-33"
            >
              <div
                className="ms-Button-textContainer textContainer-34"
              >
                <div
                  className="ms-Button-label label-36"
                  id="id__10"
                >
                  Lot
                </div>
              </div>
              <i
                aria-hidden={true}
                aria-label={undefined}
                className="root-40 ms-Button-menuIcon menuIcon-37"
                data-icon-name="ChevronDown"
                role="presentation"
              />
            </div>
          </button>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={undefined}
          className="ms-TextField-field field"
          id="TextField8"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          placeholder="Type here to Search"
          type="text"
          value=""
        />
        <div
          className="ms-TextField-suffix fieldPrefixSuffix"
        >
          <button
            aria-describedby={null}
            aria-label={undefined}
            aria-labelledby={null}
            aria-pressed={undefined}
            className="ms-Button ms-Button--icon root-43"
            data-is-focusable={true}
            disabled={undefined}
            onClick={[Function]}
            title="Search"
            type="button"
          >
            <div
              className="ms-Button-flexContainer flexContainer-33"
            >
              <i
                aria-hidden={true}
                aria-label={undefined}
                className="root-40 ms-Button-icon icon-35"
                data-icon-name="search"
                role="presentation"
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SearchBar /> should render properly 1`] = `
<div
  className="searchBarDiv"
>
  <div
    className="ms-TextField root searchBarTextField ms-TextField--borderless rootIsBorderless"
  >
    <div
      className="ms-TextField-wrapper wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup"
      >
        <div
          className="ms-TextField-prefix fieldPrefixSuffix"
        >
          <button
            aria-describedby={null}
            aria-expanded={false}
            aria-haspopup={true}
            aria-label={undefined}
            aria-labelledby={null}
            aria-owns={null}
            aria-pressed={undefined}
            className="ms-Button ms-Button--default searchTypesMenuButton root-32"
            data-is-focusable={true}
            disabled={undefined}
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <div
              className="ms-Button-flexContainer flexContainer-33"
            >
              <div
                className="ms-Button-textContainer textContainer-34"
              >
                <div
                  className="ms-Button-label label-36"
                  id="id__2"
                >
                  Lot
                </div>
              </div>
              <i
                aria-hidden={true}
                aria-label={undefined}
                className="root-40 ms-Button-menuIcon menuIcon-37"
                data-icon-name="ChevronDown"
                role="presentation"
              />
            </div>
          </button>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={undefined}
          className="ms-TextField-field field"
          id="TextField0"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          placeholder="Type here to Search"
          type="text"
          value=""
        />
        <div
          className="ms-TextField-suffix fieldPrefixSuffix"
        >
          <button
            aria-describedby={null}
            aria-label={undefined}
            aria-labelledby={null}
            aria-pressed={undefined}
            className="ms-Button ms-Button--icon root-43"
            data-is-focusable={true}
            disabled={undefined}
            onClick={[Function]}
            title="Search"
            type="button"
          >
            <div
              className="ms-Button-flexContainer flexContainer-33"
            >
              <i
                aria-hidden={true}
                aria-label={undefined}
                className="root-40 ms-Button-icon icon-35"
                data-icon-name="search"
                role="presentation"
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
